--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
         }
     ],
     "require": {
-        "ext-mysqli":"*",
+      "php": ">=7.0",
+      "ext-mysqli":"*",
         "jenssegers/blade": "^1.1",
-        "pecee/simple-router": "4.2.0.6"
+        "pecee/simple-router": "4.2.0.6",
+        "symfony/var-dumper": "*"
     },
     "autoload": {
       "classmap": [
