--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
 /vendor
-/.idea
 /.vagrant
 Homestead.json
 Homestead.yaml
@@ -8,12 +7,5 @@ npm-debug.log
 yarn-error.log
 /public/img
 public/mix-manifest.json
-.idea/codeStyles/
-.idea/inspectionProfiles/
-.idea/megabit_trial.localhost.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/php.xml
-.idea/phpRuntime.xml
-.idea/vcs.xml
-/storage
+/.idea/*
+/storage/*
