--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "jenssegers/blade": "^1.1",
         "pecee/simple-router": "4.2.0.6",
         "symfony/var-dumper": "*",
-        "robmorgan/phinx": "^0.10.6"
+        "robmorgan/phinx": "^0.10.6",
+        "ext-pdo": "*",
+        "laravel/helpers": "^1.3"
     },
     "autoload": {
       "psr-4": {
