--- a/phinx.yml
+++ b/phinx.yml
@@ -10,7 +10,7 @@ environments:
         host: localhost
         name: production_db
         user: megabit_trial
-        pass: 'XQ9sTesX1iNFjRPW'
+        pass: 'oaZ61ceWGV3uofYw'
         port: 3306
         charset: utf8
 
@@ -19,7 +19,7 @@ environments:
         host: localhost
         name: megabit_trial
         user: megabit_trial
-        pass: 'XQ9sTesX1iNFjRPW'
+        pass: 'oaZ61ceWGV3uofYw'
         port: 3306
         charset: utf8
 
@@ -28,7 +28,7 @@ environments:
         host: localhost
         name: megabit_trial
         user: megabit_trial
-        pass: 'XQ9sTesX1iNFjRPW'
+        pass: 'oaZ61ceWGV3uofYw'
         port: 3306
         charset: utf8
 
